--- a/public/assets/custom/css/index.css
+++ b/public/assets/custom/css/index.css
@@ -62,6 +62,10 @@ main {
     text-align: right;
 }
 
+#chatbot-conversation {
+    height: 90%;
+}
+
 .chatbot-conversation-container {
     /* max-height: 250px;
     min-height: 250px; */
